# robotiq

./: .gitignore  .gitmodules  .travis.rosinstall  .travis.yml  CMakeLists.txt  README.md  robotiq.rosinstall  stack.xml
robotiq/: CMakeLists.txt  package.xml
robotiq_2f_85_gripper_visualization/: CMakeLists.txt  README.md  package.xml  visualize.rviz
robotiq_2f_85_gripper_visualization/launch/: test_2f_85_model.launch  test_robotiq_arg_2f_85_model.launch
robotiq_2f_85_gripper_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_85.gazebo.xacro  robotiq_arg2f_85_model_macro.xacro  robotiq_arg2f_transmission.xacro
robotiq_2f_c2_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_c2_gripper_visualization/launch/: test_robotiq_c2_model.launch
robotiq_2f_c2_gripper_visualization/urdf/: robotiq_c2_model.urdf  robotiq_c2_model.xacro  robotiq_c2_model_macro.xacro
robotiq_2f_gripper_action_server/: CMakeLists.txt  package.xml
robotiq_2f_gripper_action_server/include/robotiq_2f_gripper_action_server/: robotiq_2f_gripper_action_server.h
robotiq_2f_gripper_action_server/launch/: robotiq_2f_gripper_action_server.launch
robotiq_2f_gripper_action_server/src/: robotiq_2f_gripper_action_server.cpp  robotiq_2f_gripper_action_server_client_test.cpp  robotiq_2f_gripper_action_server_node.cpp
robotiq_2f_gripper_control/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: robotiq_2f_gripper_ethercat_client.h
robotiq_2f_gripper_control/launch/: robotiq_2f_gripper_ethercat.launch  robotiq_gripper.launch
robotiq_2f_gripper_control/nodes/: Robotiq2FGripperRtuNode.py  Robotiq2FGripperSimpleController.py  Robotiq2FGripperStatusListener.py  Robotiq2FGripperTcpNode.py  joy_controller.py
robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: baseRobotiq2FGripper.py  robotiq_2f_gripper_ctrl.py  robotiq_2f_gripper_ethercat_client.cpp  robotiq_2f_gripper_ethercat_node.cpp
robotiq_2f_hande_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_2f_hande_gripper_visualization/config/: robotiq_hande.rviz
robotiq_2f_hande_gripper_visualization/launch/: display_hande.launch
robotiq_2f_hande_gripper_visualization/meshes/collision/: finger_1-collision.dae  finger_2-collision.dae  (+1 more)
robotiq_2f_hande_gripper_visualization/urdf/: robotiq_hand_e.urdf  robotiq_hande_gripper.transmission.xacro  robotiq_hande_gripper.urdf.xacro  robotiq_hande_gripper.xacro
robotiq_3f_gripper_articulated_gazebo/: CMakeLists.txt  package.xml
robotiq_3f_gripper_articulated_gazebo/launch/: robotiq_gripper_empty_world.launch
robotiq_3f_gripper_articulated_gazebo_plugins/: CMakeLists.txt  package.xml
robotiq_3f_gripper_articulated_gazebo_plugins/src/: RobotiqHandPlugin.cpp
robotiq_3f_gripper_articulated_msgs/: CMakeLists.txt  package.xml
robotiq_3f_gripper_articulated_msgs/msg/: Robotiq3FGripperRobotOutput.msg
robotiq_3f_gripper_control/: CMakeLists.txt  mainpage.dox  package.xml  setup.py
robotiq_3f_gripper_control/cfg/: Robotiq3FGripper.cfg
robotiq_3f_gripper_control/launch/: robotiq_3f_gripper_can.launch  robotiq_3f_gripper_ethercat.launch
robotiq_3f_gripper_control/nodes/: Robotiq3FGripperRtuNode.py  Robotiq3FGripperSimpleController.py  Robotiq3FGripperStatusListener.py  Robotiq3FGripperTcpNode.py
robotiq_3f_gripper_control/src/: robotiq_3f_gripper_can_node.cpp  robotiq_3f_gripper_ethercat_node.cpp
robotiq_3f_gripper_joint_state_publisher/: CMakeLists.txt  README.md  package.xml
robotiq_3f_gripper_joint_state_publisher/src/: robotiq_3f_gripper_joint_states.cpp
robotiq_3f_gripper_visualization/: CMakeLists.txt  package.xml
robotiq_3f_gripper_visualization/cfg/: robotiq-3f-gripper_actuated_gazebo.xacro  robotiq-3f-gripper_articulated.urdf  robotiq-3f-gripper_articulated.xacro  robotiq-3f-gripper_articulated_macro.xacro  robotiq-3f-gripper_finger_articulated_macro.xacro  robotiq-3f-gripper_mesh.urdf  robotiq-3f-gripper_mesh.xacro  robotiq-3f-gripper_mesh.xml  robotiq-3f-gripper_mesh_macro.xacro  robotiq_hand_macro.urdf.xacro
robotiq_3f_gripper_visualization/launch/: robotiq_gripper_upload.launch
robotiq_action_server/: CMakeLists.txt  package.xml
robotiq_action_server/launch/: robotiq_c_model_action_server.launch
robotiq_action_server/src/: robotiq_action_server_client_test.cpp  robotiq_c_model_action_server.cpp  robotiq_c_model_action_server_node.cpp
robotiq_arg2f_model_visualization/: CMakeLists.txt  package.xml
robotiq_arg2f_model_visualization/launch/: test_robotiq_arg_2f_140_model.launch
robotiq_arg2f_model_visualization/urdf/: robotiq_arg2f.xacro  robotiq_arg2f_140_model.xacro  robotiq_arg2f_140_model_macro.xacro
robotiq_c2_model_visualization/: CMakeLists.txt  package.xml  visualize.rviz
robotiq_c2_model_visualization/launch/: test_robotiq_c2_model.launch
robotiq_c2_model_visualization/urdf/: robotiq_c2_model.urdf  robotiq_c2_model.xacro  robotiq_c2_model_macro.xacro
robotiq_c_model_control/: CMakeLists.txt  manifest.xml  package.xml
robotiq_c_model_control/launch/: c_model_ethercat.launch
robotiq_c_model_control/nodes/: CModelRtuNode.py  CModelUsbNode.py
robotiq_c_model_visualization/: CMakeLists.txt  package.xml
robotiq_c_model_visualization/meshes/: robotiq_85_gripper_joint_1_L.dae  robotiq_85_gripper_joint_2_L.dae  robotiq_85_gripper_joint_3_L.dae
robotiq_c_model_visualization/urdf/: robotiq_c_model.urdf  robotiq_c_model.xacro  robotiq_c_model_macro.xacro
robotiq_cpp_control/: CMakeLists.txt  package.xml  readme.txt
robotiq_cpp_control/include/: gripper_interface.h  rc_gripper_interface.h  rs_gripper_interface.h
robotiq_cpp_control/launch/: rc_gripper.launch  rs_gripper.launch
robotiq_cpp_control/msg/: RCGripperCommand.msg  RSGripperCommand.msg
robotiq_cpp_control/src/: gripper_interface.cpp  rc_gripper_interface.cpp  rc_gripper_interface_node.cpp  rs_gripper_interface.cpp  rs_gripper_interface_node.cpp  rs_gripper_interface_test.cpp
robotiq_ethercat/: CMakeLists.txt  README.md  package.xml
robotiq_ethercat/src/: ethercat_manager.cpp
(+189 files in other folders)
