<package>
  <name>robotiq</name>
  <version>1.0.0</version>
  <description>Code to control and visualize Robotiq grippers</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robotiq_s_model_visualization</run_depend>
  <run_depend>robotiq_modbus_tcp</run_depend>
  <run_depend>robotiq_s_model_control</run_depend>
  <run_depend>robotiq_c_model_control</run_depend>



  <export>
    <metapackage/>
  </export>
</package>
