<?xml version="1.0"?>
<package format="2">
  <name>robotiq</name>
  <version>1.0.0</version>
  <description>ROS drivers for Robotiq Adaptive Grippers and Robotiq Force Torque Sensor</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/motoman</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_s_model_visualization</exec_depend>
  <exec_depend>robotiq_modbus_tcp</exec_depend>
  <exec_depend>robotiq_s_model_control</exec_depend>
  <exec_depend>robotiq_c_model_control</exec_depend>
  <exec_depend>robotiq_force_torque_sensor</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
