<?xml version="1.0"?>
<package format="2">
  <name>robotiq</name>
  <version>1.0.0</version>
  <description>ROS drivers for Robotiq Adaptive Grippers and Robotiq Force Torque Sensor</description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_3f_gripper_visualization</exec_depend>
  <exec_depend>robotiq_modbus_tcp</exec_depend>
  <exec_depend>robotiq_3f_gripper_control</exec_depend>
  <exec_depend>robotiq_2f_gripper_control</exec_depend>
  <exec_depend>robotiq_ft_sensor</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
