<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_action_server</name>
  <version>1.0.0</version>

  <description>
    <p>
      This package defines protocol-agnostic action-server interfaces using the 
      control_msgs::GripperCommand ROS interface for Robotiq grippers. Depending
      on your use case, you may need more fine grained control, but this is
      a good place to start.
    </p>
  </description>

  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author>Jonathan Meyer</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>control_msgs</depend>
  <depend>robotiq_2f_gripper_control</depend>
  <depend>roscpp</depend>

</package>
