<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_gripper_articulated_gazebo</name>
  <version>1.0.0</version>
  <description>Launch files for spawning the Robotiq robotiq-3f-gripper articulated gripper</description>

  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robotiq_3f_gripper_visualization</exec_depend>

</package>
