<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_gripper_articulated_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>The Robotiq gripper gazebo plugins package. Mainly a port from drcsim, to allow real Robotiq  gripper control and the plugin to have it work in Gazebo simulation. This package will provide the same interface to the gripper as one would have if they were interfacing with hardware. Porting code from software to reality should be seamless with this ROS interface now. </description>

  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>Apache 2.0</license>
  <author email="dash@clearpathrobotics.com">Devon Ash</author>
  <author email="hsu@osrfoundation.com">John Hsu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>actionlib</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>robotiq_3f_gripper_articulated_msgs</depend>

  <build_depend>angles</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
