<?xml version="1.0"?>
<package format="2">
  <name>robotiq_3f_gripper_control</name>
  <version>1.0.0</version>
  <description><p>Package to control a 3F gripper Gripper from Robotiq inc.</p></description>
  <maintainer email="ros@robotiq.com">Jean-Philippe Roberge</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>

  <author>Nicolas Lauzier (Robotiq inc.)</author>
  <author email="althackston@gmail.com">Allison Thackston</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>diagnostic_updater</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>hardware_interface</depend>
  <depend>robotiq_ethercat</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>socketcan_interface</depend>
  <depend>std_srvs</depend>
  <depend>robotiq_3f_gripper_articulated_msgs</depend>

</package>
