<?xml version="1.0"?>
<package>
  <name>robotiq_action_server</name>
  <version>0.1.0</version>

  <description>
    <p>
      This package defines protocol-agnostic action-server interfaces using the 
      control_msgs::GripperCommand ROS interface for Robotiq grippers. Depending
      on your use case, you may need more fine grained control, but this is
      a good place to start.
    </p>
  </description>

  <maintainer email="jonathan.meyer@swri.org">Jonathan Meyer</maintainer>
  <author>Jonathan Meyer</author>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>robotiq_c_model_control</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>robotiq_c_model_control</run_depend>
  <run_depend>roscpp</run_depend>

</package>
