<?xml version="1.0"?>
<package format="2">
  <name>robotiq_arg2f_model_visualization</name>
  <version>1.0.0</version>
  <description>Robotiq ARG 2-Finger 140mm model</description>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author email="ryan@rwsinnet.com">Ryan Sinnet</author>
  <maintainer email="ryan@rwsinnet.com">Ryan Sinnet</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>urdf</exec_depend>

  <export/>
</package>
