<?xml version="1.0"?>
<package format="2">
  <name>robotiq_c_model_control</name>
  <version>1.0.0</version>
  <description>Package to control a C-Model Gripper from Robotiq inc.</description>
  <maintainer email="sedwards@swri.org">Shaun Edwards</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/robotiq</url>
  <author>Nicolas Lauzier (Robotiq inc.)</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>robotiq_ethercat</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
